--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -14,7 +14,8 @@ header {
         list-style: none;
         display: flex;
         gap: 35px;
-        padding: 0;
+        padding: 10px 0;
+        margin: 0;
 
         li {
           font-size: 16px;
@@ -24,6 +25,23 @@ header {
           &:hover {
             color: #ef7c2c;
             transition: 0.4s;
+          }
+        }
+      }
+    }
+  }
+}
+
+@include response(medium-device) {
+  header {
+    padding: 0 0;
+    .container {
+      padding: 0 15px;
+
+      .header_main {
+        ul {
+          li {
+            font-size: 13px !important;
           }
         }
       }
