--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,8 @@
+@import "~bootstrap/scss/bootstrap";
+
+@import "abstract/variables";
+@import "abstract/mixins";
+
 @import "pages/loginreg";
 @import "pages/registration";
 @import "layout/header";
